--- a/src/main/resources/com/daniel/migales/client_with_maven/Login.fxml
+++ b/src/main/resources/com/daniel/migales/client_with_maven/Login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="476.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.daniel.migales.client_with_maven.PrimaryController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="476.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.daniel.migales.client_with_maven.LoginController">
    <children>
       <TabPane fx:id="tabPaneLoginRegister" layoutX="33.0" layoutY="178.0" prefHeight="400.0" prefWidth="416.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
