--- a/src/main/resources/com/daniel/migales/client_with_maven/chatStyleCss.css
+++ b/src/main/resources/com/daniel/migales/client_with_maven/chatStyleCss.css
@@ -26,26 +26,15 @@ and open the template in the editor.
     -fx-background-image:url("../..//migales/client_with_maven/images/logout.png");
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
+    -fx-background-radius: 10;
     -fx-background-size: 60px; 
 }
 
 .label {
-    -fx-font-size: 20pt;
+    -fx-font-size: 12pt;
     -fx-font-family: "System";
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 
-}
-
-.labelExit{
-    -fx-font-size: 10pt;
-    -fx-font-family: "System";
-    -fx-text-fill: white;
-}
-
-.labelSendChat{
-    -fx-font-size: 10pt;
-    -fx-font-family: "System";
-    -fx-text-fill: white;
 }
 
 .button:hover {
